<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <TextView
            style="@style/Alert"
            android:id="@+id/countdown"
            android:layout_span="2"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center"
            android:text="--:--.--" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <TextView  
            style="@style/Alert"
            android:id="@+id/status"
            android:layout_span="2"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center"
            android:text="@string/stopped" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_span="2"
            android:visibility="gone"
            android:text="@string/cancel"
            android:onClick="cancelTraining" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <Button
            android:id="@+id/button_steps"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/steps"
            android:onClick="startSteps" />
        <Button
            android:id="@+id/button_interval"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/interval"
            android:onClick="startInterval" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <Button
            android:id="@+id/button_superset"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/superset"
            android:onClick="startSuperset" />
        <Button
            android:id="@+id/button_circuit"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/circuit"
            android:onClick="startCircuit" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:padding="2dip">
        <Button
            android:id="@+id/button_intense"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_span="2"
            android:text="@string/intense"
            android:onClick="startIntense" />
    </TableRow>
</TableLayout>

